2001-03-19  Bruno Haible  <haible@clisp.cons.org>

	* autoconf/libtool.m4: Upgrade to libtool-1.3.5.

2001-03-18  Sam Steingold  <sds@gnu.org>

	* init.lisp: do not export `interpreter' & `compiler' from LISP
	for `*features*', since they are keywords now.

2001-03-17  Sam Steingold  <sds@gnu.org>

	load-inside-load bug fix
	* pathname.d (parse_logical_word, parse_logical_host_prefix,
	legal_logical_word, legal_name, legal_type, wildcard_match,
	wildcard_diff): make sure that the `simple-string' is normal.

2001-03-16  Sam Steingold  <sds@gnu.org>

	`compile-file-pathname' bug fix
	* compiler.lisp (compile-file-pathname-helper): new function
	(compile-file-pathname, compile-file): use it

2001-03-15  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.devel (all): Depend on src/VERSION instead of src/version.h.
	(ffcall-i386): New target.
	* spvw_memfile.d (savemem): Zero-fill the rest of _dumphost.
	* spvw.d (main): Do complain about missing -B in all cases.
	(usage): Internationalize.

2001-03-14  Sam Steingold  <sds@gnu.org>

	New versioning system adopted.
	* spvw.d (main): --version works without -B and -M
	  we are now GNU CLISP!
	  do not complain about missing -B when given -x
	* constobj.d (lisp_implementation_version_month_string): removed
	(lisp_implementation_version_date_string): set to VERSION_DATE
	(lisp_implementation_version_number_string): set to VERSION_NUMBER
	(lisp_implementation_version_built_string): set to __DATE__
	(memory_image_timestamp, memory_image_host): new objects
	* makemake.in: VERSION depends on version.h now
	* Makefile.devel: ditto; remove `update-version', unused for 2.5 years
	* misc.d (lisp-implementation-version): return "2.25 (2001-03-15)"
	  and then either the build date of the build host
	* spvw_memfile.d (memdump_header): added `_dumptime' and `_dumphost'
	(savemem, loadmem_from_handle): use them for
	  `memory_image_timestamp' and `memory_image_host'

2001-03-13  Sam Steingold  <sds@gnu.org>
