@@ -1,5 +1,15 @@
 2001-03-19  Bruno Haible  <haible@clisp.cons.org>
 
+	* pathname.d (PARSE-NAMESTRING): Coerce string to normal-simple-string
+	before calling parse_logical_host_prefix.
+
+	* lispbibl.d (sstring_normal_p): New macro.
+	* pathname.d (parse_logical_word, parse_logical_host_prefix,
+	legal_logical_word, legal_name, legal_type, wildcard_match,
+	wildcard_diff): assert that the simple-string is normal.
+
+2001-03-19  Bruno Haible  <haible@clisp.cons.org>
+
 	* autoconf/libtool.m4: Upgrade to libtool-1.3.5.
 
 2001-03-18  Sam Steingold  <sds@gnu.org>
